<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    cardview:cardCornerRadius="10sp">

    <LinearLayout
        android:id="@+id/lvLista_principal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/fotoMensaje"
            android:layout_width="25sp"
            android:layout_height="25sp"
            android:layout_margin="10sp"
            android:contentDescription="@string/todo"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:id="@+id/lvSuperior"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/lvSuperior3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvNombreMensaje"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sebastian" />

                <TextView
                    android:id="@+id/tvHoraMensaje"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hora" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvMensajeMensaje"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:text="@string/hola_bienvenido" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>